--- a/CppProgramming/SortingAlgorithm/SortingAlgorithm.vcxproj.filters
+++ b/CppProgramming/SortingAlgorithm/SortingAlgorithm.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\MergeSort.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\QuickSort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Sort.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\MergeSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\QuickSort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
