feat(cp): add count sort

--- a/CppProgramming/SortingAlgorithm/SortingAlgorithm.vcxproj
+++ b/CppProgramming/SortingAlgorithm/SortingAlgorithm.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="src\InsertionSort.cpp" />
     <ClCompile Include="src\MergeSort.cpp" />
     <ClCompile Include="src\QuickSort.cpp" />
+    <ClCompile Include="src\CountSort.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Sort.h" />
@@ -135,6 +136,7 @@
     <ClInclude Include="include\InsertionSort.h" />
     <ClInclude Include="include\MergeSort.h" />
     <ClInclude Include="include\QuickSort.h" />
+    <ClInclude Include="include\CountSort.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
