--- a/CppProgramming/SortingAlgorithm/SortingAlgorithm.vcxproj.filters
+++ b/CppProgramming/SortingAlgorithm/SortingAlgorithm.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\QuickSort.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\CountSort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Sort.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\QuickSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CountSort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
