--- a/CppProgramming/SortingAlgorithm/SortingAlgorithm.vcxproj.filters
+++ b/CppProgramming/SortingAlgorithm/SortingAlgorithm.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\CountSort.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\RadixSort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Sort.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\CountSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\RadixSort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
